# praier

./: .env.docker  .env.example  Dockerfile  README.md  config.example.yaml  demo.py  docker-compose.yml  pyproject.toml  test-config.yaml
.github/: REPOSITORY_SETTINGS.md  copilot-instructions.md
.github/workflows/: praier-monitor.yml  tests.yml
praier/: __init__.py  agents.py  cli.py  config.py  github_client.py  monitor.py
scripts/: install.sh  praier.service
tests/: __init__.py  test_agents.py  test_cli.py  test_config.py  test_github_client.py  test_monitor.py  test_scripts.py
